--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,3 +19,9 @@ jobs:
         with:
           name: pdf
           path: example.pdf
+      - name: Create Release
+        if: github.ref == 'refs/heads/main'
+        uses: softprops/action-gh-release@v1
+        with:
+          files: example.pdf
+          generate_release_notes: true
