--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,16 +9,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4 
+        
       - uses: xu-cheng/latex-action@v2
         with:
-          root_file: "example.tex"  # Укажите ваш файл
+          root_file: "example.tex"
           args: "-shell-escape -interaction=nonstopmode"
+          
       - name: Upload PDF
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4 
         with:
-          name: pdf
+          name: latex-pdf
           path: example.pdf
+          
       - name: Create Release
         if: github.ref == 'refs/heads/main'
         uses: softprops/action-gh-release@v1
