--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build LaTeX Document
+name: Build and Upload LaTeX PDF
 on:
   push:
     branches: [ "main" ]
@@ -9,22 +9,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4 
+      - uses: actions/checkout@v4
         
       - uses: xu-cheng/latex-action@v2
         with:
           root_file: "example.tex"
           args: "-shell-escape -interaction=nonstopmode"
           
-      - name: Upload PDF
+      - name: Upload PDF as Artifact
         uses: actions/upload-artifact@v4 
         with:
           name: latex-pdf
           path: example.pdf
           
-      - name: Create Release
+      - name: Commit and Push PDF
         if: github.ref == 'refs/heads/main'
-        uses: softprops/action-gh-release@v1
-        with:
-          files: example.pdf
-          generate_release_notes: true
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add example.pdf
+          git commit -m "Update PDF [skip ci]"
+          git push
