--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,11 +10,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: true
         
       - uses: xu-cheng/latex-action@v2
         with:
           root_file: "example.tex"
           args: "-shell-escape -interaction=nonstopmode"
+          
+      - name: Verify PDF exists
+        run: |
+          ls -la
+          if [ ! -f "example.pdf" ]; then
+            echo "::error::PDF file not found!"
+            exit 1
+          fi
           
       - name: Upload PDF as Artifact
         uses: actions/upload-artifact@v4 
@@ -25,8 +36,10 @@ jobs:
       - name: Commit and Push PDF
         if: github.ref == 'refs/heads/main'
         run: |
+          mkdir -p pdf
+          cp example.pdf pdf/
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add example.pdf
+          git add pdf/example.pdf
           git commit -m "Update PDF [skip ci]"
           git push
